syntax = "proto3";

package models;
option go_package=".";


message ImageLayer {
  enum DigestAlgorithm {
    DigestAlgorithmInvalid = 0; // not camel cased since it isn't supposed to be used by API users
    SHA256                 = 1 [(string_name) = "DigestAlgorithmSha256"];
    SHA512                 = 2 [(string_name) = "DigestAlgorithmSha512", deprecated=true];
  }

  enum MediaType {
    MediaTypeInvalid = 0; // not camel cased since it isn't supposed to be used by API users
    TGZ              = 1 [(string_name) = "MediaTypeTgz"];
    TAR              = 2 [(string_name) = "MediaTypeTar"];
    ZIP              = 3 [(string_name) = "MediaTypeZip"];
  }

  enum Type {
    LayerTypeInvalid = 0; // not camel cased since it isn't supposed to be used by API users
    SHARED           = 1 [(string_name) = "LayerTypeShared"];
    EXCLUSIVE        = 2 [(string_name) = "LayerTypeExclusive"];
  }

  string name                      = 1;
  string url                       = 2 [json_name =  "url"];
  string destination_path          = 3 [json_name =  "destination_path"];
  Type layer_type                  = 4 [json_name = "layer_type"];
  MediaType media_type             = 5 [json_name = "media_type"];
  DigestAlgorithm digest_algorithm = 6;
  string digest_value              = 7;
}
