syntax = "proto3";

package models;
option go_package=".";

message LogRateLimit {
  int64 bytes_per_second = 1;
}
